--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
-    "postinstall": "«rm ./node_modules/react-native/local-cli/core/__fixtures__/files/package.json"
+    "test": "jest"
   },
   "dependencies": {
     "react": "16.4.1",
     "react-native": "0.56.0",
-    "react-native-camera": "^1.1.4"
+    "react-native-camera": "^1.1.4",
+    "react-native-layout-grid": "0.0.2"
   },
   "devDependencies": {
     "babel-jest": "23.4.0",
