--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest",
-    "postinstall": "«rm ./node_modules/react-native/local-cli/core/__fixtures__/files/package.json"
+    "test": "jest"
   },
   "dependencies": {
+    "expo": "^27.0.1",
+    "file-system": "^2.2.2",
     "react": "16.4.1",
     "react-native": "0.56.0",
-    "react-native-camera": "^1.1.4"
+    "react-native-camera": "^1.1.4",
+    "react-navigation": "^2.6.2",
+    "request": "^2.87.0"
   },
   "devDependencies": {
     "babel-jest": "23.4.0",
     "babel-preset-react-native": "5.0.2",
     "jest": "23.4.0",
-    "react-test-renderer": "16.4.1"
+    "react-test-renderer": "16.4.1",
+    "react-native-scripts": "1.14.0"
   },
   "jest": {
     "preset": "react-native"
