--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-native": "0.56.0",
     "react-native-camera": "^1.1.4",
     "react-navigation": "^2.6.2",
-    "request": "^2.87.0"
+    "request": "^2.87.0",
+    "rn-viewpager": "^1.2.9"
   },
   "devDependencies": {
     "babel-jest": "23.4.0",
